# agentmesh

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
agents/: agentmesh.py
agents/subagents/: scorer.py
delivery/: telegram_bot.py
sources/: deals.py  events.py  fii_dii.py  fundamentals.py  news_rss.py  nse.py  price.py
tests/: test_integration.py
utils/: config.py  enrichment.py  market_calendar.py  nse_symbols.py
